--- a/cringe.css
+++ b/cringe.css
@@ -5,11 +5,42 @@ body {
 .iframe-container {
   overflow: hidden; /* Hide the rest of the iframe */
   position: absolute;
-
-  border: 2px solid black; /* Optional, for visual clarity */
+  border-radius: 8px;
+  opacity: 0;
 }
 
 .iframe-container iframe {
   position: absolute;
   border: none;
+}
+
+
+.iframe-container.animate {
+  animation: resize 0.4s forwards;
+}
+
+.iframe-container.accept {
+  animation: accept 0.4s forwards;
+}
+
+@keyframes resize {
+  0% {
+    transform: scale(0.5);
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+    border: 2px solid black;
+  }
+}
+
+@keyframes accept {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(3);
+  }
+  
 }
